# llama_setup_vacc

./: README.md  basic_linux_commad.txt  pyproject.toml  requirements.txt
advanced_tutorials/: 04_knowledge_graph_llama_cpp.ipynb  05_fine_tuning_unsloth.ipynb  05_langextract.ipynb  05_simple_rag.ipynb  12_fixed_llm_disambiguation.ipynb  13_real_data_disambiguation.ipynb
advanced_tutorials/templates/03_validating_NER/: prompt_0.txt  prompt_1.txt
data/: balanced_output.csv  output_03e48481195ba4783678f1ae446b40a7f6f12791.jsonl  train.csv
get_started/: 01_run_llama.ipynb  01b_run_llama_outlines.ipynb
jupyter_setup/: jupyter-server.sbatch  ollama-server.sbatch  start-jupyter.sh
jupyter_setup/tmp/: .out
src/: 01b_run_llama_outlines.ipynb  02_template.ipynb  03_validating_NER.ipynb  05_fine_tuning_unsloth.ipynb
