[project]
name = "llama-setup-vacc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.9.0",
    "filelock==3.18.0",
    "fsspec==2025.7.0",
    "hf-xet==1.1.5",
    "huggingface-hub==0.34.3",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "llama-cpp-python>=0.3.15",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numba>=0.61",
    "numpy>=1.24,<2.2",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "outlines>=1.2.2",
    "pip>=25.2",
    "pydantic>=2.0.0",
    "regex==2025.7.34",
    "rich>=13.0.0",
    "safetensors==0.5.3",
    "sentencepiece>=0.2.1",
    "spacy>=3.7.0",
    "spacy-transformers>=1.3.9",
    "sympy==1.14.0",
    "tokenizers==0.21.4",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "triton==3.3.1",
]
