[project]
name = "llama-setup-vacc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "outlines>=1.2.3",
    "rich>=13.0.0",
]

[dependency-groups]
fine-tuning = [
    "datasets>=3.6.0",
    "matplotlib>=3.10.5",
    "scikit-learn>=1.7.1",
    "trl>=0.21.0",
    "unsloth>=2025.8.5",
]
